<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_hide_completed_false">Показать</string>
    <string name="title_hide_completed_true">Скрыть</string>
    <string name="title_filters">Фильтр</string>
    <string name="hide_completed">Скрыть выполненные</string>
    <string name="content_description_hide_completed_filter">Скрыть выполненные</string>
    <string name="title_filters_other">Прочие отборы</string>
    <string name="content_description_other_filter_1">Фильтр 1</string>
    <string name="title_other_filter_2">Фильтр 2</string>
    <string name="content_description_other_filter_2">Фильтр 2</string>
    <string name="title_other_filter_1">Фильтр 2</string>
    <string name="save">Сохранить</string>
</resources>