<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/support_modal_background" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shp_bottom_sheet"
            android:orientation="vertical" >

<!--            <ImageView-->
<!--                android:id="@+id/iv_minus"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="4dp"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:contentDescription="@string/content_description_minus_separator"-->
<!--                android:src="@drawable/ic_bottom_sheet_line" />-->

            <include layout="@layout/view_minus"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:textAppearance="@style/TextAppearance.Title"
                android:text="@string/title_filters"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_importance_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Regular"
                    android:text="@string/hide_completed" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_hide_completed_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/ic_visibility_on"
                        android:contentDescription="@string/content_description_hide_completed_filter"
                        app:tint="@color/support_border_primary" />

                    <TextView
                        android:id="@+id/tv_hide_completed_filter"
                        style="@style/label_primary_body"
                        android:layout_width="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Regular"
                        android:text="@string/title_hide_completed_false" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Regular"
                    android:text="@string/title_filters_other" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/ic_filter"
                        android:contentDescription="@string/content_description_other_filter_1"
                        app:tint="@color/support_border_primary" />

                    <TextView
                        style="@style/label_primary_body"
                        android:layout_width="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Regular"
                        android:text="@string/title_other_filter_2" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/ic_filter"
                        android:contentDescription="@string/content_description_other_filter_2"
                        app:tint="@color/support_border_primary" />

                    <TextView
                        style="@style/label_primary_body"
                        android:layout_width="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Regular"
                        android:text="@string/title_other_filter_1" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_filters"
                style="@style/TextAppearance.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shp_button_primary"
                android:text="@string/save"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>